# nyars-tokenizer

./: .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yml
.github/workflows/: release.yml
proto/: tokenizer.proto
src/: main.rs
