[package]
edition = "2021"
name = "nyars-tokenizer"
version = "0.0.1"
build = "build.rs"

[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
prost = "0.13.4"
ruzstd = "0.8.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
vibrato = "0.5.1"

[profile.release]
strip = true
lto = true
panic = 'abort'


